Update meta data

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
 	<link rel="icon" sizes="192x192" href="%PUBLIC_URL%/logo-icon.png">
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:title" content="Todos">
-	<meta name="twitter:description" content="A simple todo app built with react hooks.">
+	<meta name="twitter:description" content="Nev's TodoMVC Assignment.">
 	<meta name="twitter:image" content="%PUBLIC_URL%/logo-icon.png">
-	<meta property="og:url" content="https://jacob-ebey.github.io/hooks-todo/#/">
+	<!-- <meta property="og:url" content="https://jacob-ebey.github.io/hooks-todo/#/"> -->
 	<meta name="og:title" content="Todos">
-	<meta name="og:description" content="A simple todo app built with react hooks.">
+	<meta name="og:description" content="Nev's TodoMVC Assignment.">
 	<meta name="og:image" content="%PUBLIC_URL%/logo-icon.png">
 	<!--
       manifest.json provides metadata used when your web app is added to the
